# NineBoardTicTacToe

./: Board.cpp  CMakeLists.txt  Coup.cpp  Player.cpp  ia.cpp  main.cpp
includes/: Board.h  Cell.h  Coup.h  IA_AlphaBeta.h  IA_MC.h  IA_MINIMAX.h  Player.h  structs.h
